fixed overflow issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -280,7 +280,7 @@ nav li.selected a {
 }
 
 header .header_box {
-    padding-top: 4.5em;
+/*    padding-top: 4.5em; */
     
 }
 .site_title {
